# happyhub-core

./: README.md  pyproject.toml  vector_db.pkl
happy_hub/functions/: __init__.py  openai_function.py  retrieval_functions.py
happy_hub/messages/: __init__.py
happy_hub/models/: __init__.py  base_model.py  ollama_model.py
happy_hub/prompts/: fun_chat.yml  mb_info_query.yml  semantic_router.yml
happy_hub/storage/: __init__.py  simple_db.py
happy_hub/types/: __init__.py
tasks/: semantic_router.ipynb
tests/models/: test_ollama_models.py
tests/storage/: test_simple_db.py
